--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -3,177 +3,155 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' 'unsafe-inline';
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    img-src 'self' data:;
+    font-src 'self' https://fonts.gstatic.com;
+    connect-src 'self' https://script.google.com https://www.googleapis.com;
+  ">
   <title>Admin - CentrodeCompra</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
     body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #fff;
+      font-family: 'Roboto', Arial, sans-serif;
+      background-color: #f5f5f5;
       color: #333;
       padding: 20px;
-    }
-    .form-container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
-      background-color: #f9f9f9;
-      padding: 20px;
-      border-radius: 5px;
-      border: 1px solid #e0e0e0;
     }
-    .form-container h2 {
-      font-size: 1.5em;
-      margin-bottom: 20px;
+    h1 {
+      color: #2E8B57;
       text-align: center;
-      color: #FFA500;
     }
-    .form-group {
-      margin-bottom: 15px;
+    form {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     label {
       display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-      color: #333;
+      margin: 10px 0 5px;
+      font-weight: 500;
     }
     input, select, textarea {
       width: 100%;
-      padding: 10px;
+      padding: 8px;
+      margin-bottom: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
-      font-size: 1em;
-    }
-    textarea {
-      height: 100px;
-      resize: vertical;
     }
     button {
-      display: block;
-      width: 100%;
-      padding: 10px;
       background-color: #FFA500;
       color: white;
+      padding: 10px 20px;
       border: none;
       border-radius: 4px;
       cursor: pointer;
-      font-size: 1em;
     }
     button:hover {
       background-color: #e69500;
     }
-    .error-message {
-      color: red;
-      text-align: center;
+    #feedback {
       margin-top: 10px;
-      display: none;
+      color: #333;
     }
-    .success-message {
-      color: #28a745;
-      text-align: center;
-      margin-top: 10px;
-      display: none;
+    #imagens-preview {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
     }
-    @media (max-width: 480px) {
-      .form-container {
-        padding: 15px;
-      }
-      button {
-        font-size: 0.9em;
-      }
+    #imagens-preview img {
+      max-width: 100px;
+      height: auto;
+      border-radius: 4px;
+    }
+    @media (max-width: 768px) {
+      form { padding: 15px; }
+      input, select, textarea { font-size: 0.9em; }
+      button { padding: 8px 16px; }
     }
   </style>
 </head>
 <body>
-  <div class="form-container">
-    <h2>Adicionar Produto</h2>
-    <form id="produto-form" onsubmit="adicionarProduto(event)">
-      <div class="form-group">
-        <label for="nome">Nome do Produto</label>
-        <input type="text" id="nome" name="nome" required>
-      </div>
-      <div class="form-group">
-        <label for="descricao">Descrição</label>
-        <textarea id="descricao" name="descricao"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="categoria">Categoria</label>
-        <select id="categoria" name="categoria" required>
-          <option value="">Selecione uma categoria</option>
-          <option value="eletronicos">Eletrônicos</option>
-          <option value="moda">Moda</option>
-          <option value="fitness">Fitness</option>
-          <option value="casa">Casa</option>
-          <option value="beleza">Beleza</option>
-          <option value="esportes">Esportes</option>
-          <option value="livros">Livros</option>
-          <option value="infantil">Infantil</option>
-          <option value="celulares">Celulares</option>
-          <option value="eletrodomesticos">Eletrodomésticos</option>
-          <option value="pet">Pet</option>
-          <option value="jardinagem">Jardinagem</option>
-          <option value="automotivo">Automotivo</option>
-          <option value="gastronomia">Gastronomia</option>
-          <option value="games">Games</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="loja">Loja</label>
-        <select id="loja" name="loja" required>
-          <option value="">Selecione uma loja</option>
-          <option value="amazon">Amazon</option>
-          <option value="magalu">Magalu</option>
-          <option value="shein">Shein</option>
-          <option value="shopee">Shopee</option>
-          <option value="mercadolivre">Mercado Livre</option>
-          <option value="alibaba">Alibaba</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="link">Link do Produto</label>
-        <input type="url" id="link" name="link" required>
-      </div>
-      <div class="form-group">
-        <label for="preco">Preço (R$)</label>
-        <input type="text" id="preco" name="preco">
-      </div>
-      <div class="form-group">
-        <label for="imagens">Imagens</label>
-        <input type="file" id="imagens" name="imagens" multiple accept="image/*">
-      </div>
-      <button type="submit">Adicionar Produto</button>
-    </form>
-    <p id="error-message" class="error-message"></p>
-    <p id="success-message" class="success-message"></p>
-  </div>
+  <h1>Admin - Adicionar/Editar Produto</h1>
+  <form id="produto-form">
+    <label for="nome">Nome do Produto</label>
+    <input type="text" id="nome" name="nome" required>
+
+    <label for="descricao">Descrição</label>
+    <textarea id="descricao" name="descricao" rows="4"></textarea>
+
+    <label for="categoria">Categoria</label>
+    <select id="categoria" name="categoria">
+      <option value="eletronicos">Eletrônicos</option>
+      <option value="moda">Moda</option>
+      <option value="fitness">Fitness</option>
+      <option value="casa">Casa</option>
+      <option value="beleza">Beleza</option>
+      <option value="esportes">Esportes</option>
+      <option value="livros">Livros</option>
+      <option value="infantil">Infantil</option>
+      <option value="celulares">Celulares</option>
+      <option value="eletrodomesticos">Eletrodomésticos</option>
+      <option value="pet">Pet</option>
+      <option value="jardinagem">Jardinagem</option>
+      <option value="automotivo">Automotivo</option>
+      <option value="gastronomia">Gastronomia</option>
+      <option value="games">Games</option>
+    </select>
+
+    <label for="loja">Loja</label>
+    <select id="loja" name="loja">
+      <option value="amazon">Amazon</option>
+      <option value="magalu">Magalu</option>
+      <option value="shein">Shein</option>
+      <option value="shopee">Shopee</option>
+      <option value="mercadolivre">Mercado Livre</option>
+      <option value="alibaba">Alibaba</option>
+    </select>
+
+    <label for="link">Link do Produto</label>
+    <input type="url" id="link" name="link">
+
+    <label for="preco">Preço (R$)</label>
+    <input type="text" id="preco" name="preco">
+
+    <label for="imagens">Imagens (máximo 5)</label>
+    <input type="file" id="imagens" name="imagens" accept="image/*" multiple>
+
+    <label for="rowIndex">Índice da Linha (para edição, opcional)</label>
+    <input type="number" id="rowIndex" name="rowIndex" min="2">
+
+    <div id="imagens-preview"></div>
+    <button type="submit">Salvar Produto</button>
+    <div id="feedback"></div>
+  </form>
 
   <script>
-    async function adicionarProduto(event) {
-      event.preventDefault();
-      const form = event.target;
-      const formData = new FormData(form);
-      const imagensBase64 = [];
-      const errorMessage = document.getElementById('error-message');
-      const successMessage = document.getElementById('success-message');
+    const WEB_APP_URL = 'https://script.google.com/macros/s/.../exec'; // Substitua pela URL da Web App
 
-      errorMessage.style.display = 'none';
-      successMessage.style.display = 'none';
+    document.getElementById('produto-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const feedback = document.getElementById('feedback');
+      feedback.textContent = 'Enviando...';
 
       try {
-        const imagemInput = form.querySelector('#imagens');
-        if (imagemInput.files.length > 0) {
-          for (let file of imagemInput.files) {
-            const base64 = await new Promise((resolve) => {
-              const reader = new FileReader();
-              reader.onload = () => resolve(reader.result);
-              reader.readAsDataURL(file);
-            });
-            imagensBase64.push(base64);
-          }
-        }
+        const formData = new FormData(e.target);
+        const imagens = formData.getAll('imagens');
+        const imagensBase64 = await Promise.all(
+          Array.from(imagens).map(file => new Promise((resolve, reject) => {
+            const reader = new FileReader();
+            reader.onload = () => resolve(reader.result);
+            reader.onerror = reject;
+            reader.readAsDataURL(file);
+          }))
+        );
 
         const data = {
           nome: formData.get('nome'),
@@ -182,33 +160,47 @@
           loja: formData.get('loja'),
           link: formData.get('link'),
           preco: formData.get('preco'),
-          imagensBase64: imagensBase64
+          imagensBase64: imagensBase64,
+          rowIndex: formData.get('rowIndex') || undefined
         };
 
-        console.log('Enviando dados:', data);
-
-        const response = await fetch('SUA_URL_DO_GOOGLE_APPS_SCRIPT', {
+        const response = await fetch(WEB_APP_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data)
         });
 
         const result = await response.json();
-        console.log('Resposta da API:', result);
-
         if (result.success) {
-          successMessage.textContent = 'Produto adicionado com sucesso!';
-          successMessage.style.display = 'block';
-          form.reset();
+          feedback.textContent = 'Produto salvo com sucesso!';
+          feedback.style.color = '#2E8B57';
+          e.target.reset();
+          document.getElementById('imagens-preview').innerHTML = '';
         } else {
-          throw new Error(result.error || 'Erro desconhecido ao adicionar produto.');
+          throw new Error(result.error || 'Erro ao salvar produto');
         }
       } catch (error) {
-        console.error('Erro ao adicionar produto:', error);
-        errorMessage.textContent = `Erro: ${error.message}`;
-        errorMessage.style.display = 'block';
+        console.error('Erro:', error);
+        feedback.textContent = `Erro: ${error.message}`;
+        feedback.style.color = '#d32f2f';
       }
-    }
+    });
+
+    document.getElementById('imagens').addEventListener('change', (e) => {
+      const preview = document.getElementById('imagens-preview');
+      preview.innerHTML = '';
+      const files = e.target.files;
+      if (files.length > 5) {
+        alert('Máximo de 5 imagens permitido.');
+        e.target.value = '';
+        return;
+      }
+      Array.from(files).forEach(file => {
+        const img = document.createElement('img');
+        img.src = URL.createObjectURL(file);
+        preview.appendChild(img);
+      });
+    });
   </script>
 </body>
 </html>
