--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -8,26 +8,79 @@
     default-src 'self';
     script-src 'self' 'unsafe-inline' https://www.gstatic.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    img-src 'self' data: https://bingaby.github.io https://drive.google.com https://*.googleusercontent.com;
+    img-src 'self' data: https://bingaby.github.io https://drive.google.com https://*.googleusercontent.com https://www.centrodecompra.com.br;
     font-src 'self' https://fonts.gstatic.com;
     connect-src 'self' https://script.google.com https://www.googleapis.com https://opensheet.vercel.app https://bingaby.github.io;
   ">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
   <style>
-    body { font-family: 'Roboto', Arial, sans-serif; background: #f5f5f5; margin: 0; padding: 20px; }
-    .container { max-width: 800px; margin: 0 auto; background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    h1 { color: #2E8B57; text-align: center; }
-    form { display: flex; flex-direction: column; gap: 15px; }
-    label { font-weight: bold; color: #333; }
-    input, select, textarea { padding: 10px; border: 1px solid #ccc; border-radius: 4px; font-size: 16px; }
-    input[type="file"] { padding: 5px; }
-    button { background: #FFA500; color: #fff; padding: 10px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; }
-    button:hover { background: #e69500; }
-    #feedback { text-align: center; font-weight: bold; }
-    #imagens-preview { display: flex; flex-wrap: wrap; gap: 10px; }
-    #imagens-preview img { max-width: 100px; border-radius: 4px; }
-    @media (max-width: 600px) { .container { padding: 10px; } }
+    body {
+      font-family: 'Roboto', Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 20px;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #2E8B57;
+      text-align: center;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+    label {
+      font-weight: bold;
+      color: #333;
+    }
+    input, select, textarea {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+    input[type="file"] {
+      padding: 5px;
+    }
+    button {
+      background: #FFA500;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background: #e69500;
+    }
+    #feedback {
+      text-align: center;
+      font-weight: bold;
+    }
+    #imagens-preview {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    #imagens-preview img {
+      max-width: 100px;
+      border-radius: 4px;
+    }
+    @media (max-width: 600px) {
+      .container {
+        padding: 10px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -36,8 +89,10 @@
     <form id="produto-form">
       <label for="nome">Nome do Produto:</label>
       <input type="text" id="nome" name="nome" required>
+
       <label for="descricao">Descrição:</label>
       <textarea id="descricao" name="descricao" rows="4" required></textarea>
+
       <label for="categoria">Categoria:</label>
       <select id="categoria" name="categoria" required>
         <option value="eletronicos">Eletrônicos</option>
@@ -45,32 +100,40 @@
         <option value="acessorios">Acessórios</option>
         <option value="casa">Casa</option>
       </select>
+
       <label for="loja">Loja:</label>
       <select id="loja" name="loja" required>
         <option value="amazon">Amazon</option>
         <option value="mercadolivre">Mercado Livre</option>
         <option value="shopee">Shopee</option>
       </select>
+
       <label for="link">Link do Produto:</label>
       <input type="url" id="link" name="link" required>
+
       <label for="preco">Preço (R$):</label>
       <input type="number" id="preco" name="preco" step="0.01" required>
+
       <label for="imagens">Imagens:</label>
       <input type="file" id="imagens" name="imagens" accept="image/*" multiple>
       <div id="imagens-preview"></div>
+
       <input type="hidden" id="rowIndex" name="rowIndex">
       <button type="submit">Salvar Produto</button>
     </form>
     <div id="feedback"></div>
   </div>
+
   <script>
     const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzAqnXXQP1ZZiS81K8MHlHrffa7AJENMeaf2zPg2yuDSm2BN-6jMCiPsXqvzwp2eWdw/exec';
+
     // Verificar autenticação
     const urlParams = new URLSearchParams(window.location.search);
     if (urlParams.get('tempToken') !== 'triple-click-access') {
       alert('Acesso não autorizado.');
       window.location.href = '/index.html';
     }
+
     // Visualizar imagens
     document.getElementById('imagens').addEventListener('change', (e) => {
       const preview = document.getElementById('imagens-preview');
@@ -81,6 +144,7 @@
         preview.appendChild(img);
       });
     });
+
     // Enviar formulário
     document.getElementById('produto-form').addEventListener('submit', async (e) => {
       e.preventDefault();
