--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin - Centro de Compras</title>
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline' https://www.gstatic.com;
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-    img-src 'self' data: https://bingaby.github.io https://drive.google.com https://*.googleusercontent.com https://www.centrodecompra.com.br;
+    img-src 'self' data: blob: https://bingaby.github.io https://drive.google.com https://*.googleusercontent.com https://www.centrodecompra.com.br;
     font-src 'self' https://fonts.gstatic.com;
     connect-src 'self' https://script.google.com https://www.googleapis.com https://opensheet.vercel.app https://bingaby.github.io;
   ">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/style.css" />
   <style>
     body {
       font-family: 'Roboto', Arial, sans-serif;
@@ -88,7 +88,7 @@
     <h1>Adicionar/Editar Produto</h1>
     <form id="produto-form">
       <label for="nome">Nome do Produto:</label>
-      <input type="text" id="nome" name="nome" required>
+      <input type="text" id="nome" name="nome" required />
 
       <label for="descricao">Descrição:</label>
       <textarea id="descricao" name="descricao" rows="4" required></textarea>
@@ -109,16 +109,16 @@
       </select>
 
       <label for="link">Link do Produto:</label>
-      <input type="url" id="link" name="link" required>
+      <input type="url" id="link" name="link" required />
 
       <label for="preco">Preço (R$):</label>
-      <input type="number" id="preco" name="preco" step="0.01" required>
+      <input type="number" id="preco" name="preco" step="0.01" required />
 
       <label for="imagens">Imagens:</label>
-      <input type="file" id="imagens" name="imagens" accept="image/*" multiple>
+      <input type="file" id="imagens" name="imagens" accept="image/*" multiple />
       <div id="imagens-preview"></div>
 
-      <input type="hidden" id="rowIndex" name="rowIndex">
+      <input type="hidden" id="rowIndex" name="rowIndex" />
       <button type="submit">Salvar Produto</button>
     </form>
     <div id="feedback"></div>
@@ -134,7 +134,7 @@
       window.location.href = '/index.html';
     }
 
-    // Visualizar imagens
+    // Visualizar imagens selecionadas antes do upload
     document.getElementById('imagens').addEventListener('change', (e) => {
       const preview = document.getElementById('imagens-preview');
       preview.innerHTML = '';
@@ -145,7 +145,7 @@
       });
     });
 
-    // Enviar formulário
+    // Enviar formulário para Google Apps Script
     document.getElementById('produto-form').addEventListener('submit', async (e) => {
       e.preventDefault();
       const feedback = document.getElementById('feedback');
