--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,138 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
   <title>Adicionar Produtos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { 
-      font-family: 'Roboto', Arial, sans-serif; 
-      padding: 20px; 
-      background-color: #f5f5f5; 
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 20px auto;
     }
-    h1 { 
-      text-align: center; 
-      color: #333; 
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
-    form { 
-      max-width: 500px; 
-      margin: auto; 
-      display: flex; 
-      flex-direction: column; 
-      gap: 10px; 
-      background: white; 
-      padding: 20px; 
-      border-radius: 8px; 
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    input, select, button {
+      padding: 10px;
+      font-size: 16px;
     }
-    input, select, button { 
-      padding: 10px; 
-      border: 1px solid #ddd; 
-      border-radius: 4px; 
-      font-size: 16px; 
+    .produto-lista {
+      margin-top: 30px;
     }
-    button { 
-      background-color: #ff6200; 
-      color: white; 
-      border: none; 
-      cursor: pointer; 
-      font-weight: bold; 
+    .produto-item {
+      border: 1px solid #ddd;
+      padding: 10px;
+      margin-bottom: 10px;
     }
-    button:hover { 
-      background-color: #e55a00; 
+    .produto-item img {
+      max-width: 100px;
+      max-height: 100px;
+      margin-right: 10px;
     }
-    #mensagem { 
-      margin-top: 10px; 
-      color: green; 
-      text-align: center; 
-    }
-    #erro { 
-      margin-top: 10px; 
-      color: red; 
-      text-align: center; 
-    }
-    .produto-lista { 
-      margin-top: 20px; 
-      max-width: 500px; 
-      margin: auto; 
-      max-height: 500px; 
-      overflow-y: auto; 
-      padding: 10px; 
-      background: white; 
-      border-radius: 8px; 
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    }
-    .produto-item { 
-      display: flex; 
-      justify-content: space-between; 
-      align-items: center; 
-      padding: 8px; 
-      background: #f9f9f9; 
-      border-radius: 4px; 
-      margin-bottom: 5px; 
-      font-size: 14px; 
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); 
-    }
-    .produto-item button { 
-      background-color: #d32f2f; 
-      color: white; 
-      border: none; 
-      cursor: pointer; 
-      padding: 4px 8px; 
-      border-radius: 4px; 
-      font-size: 12px; 
-    }
-    .produto-item button:hover { 
-      background-color: #b71c1c; 
-    }
-    .produto-item img { 
-      max-width: 30px; 
-      max-height: 30px; 
-      margin-left: 8px; 
-      border-radius: 4px; 
-      object-fit: contain; 
-    }
-    .produto-info { 
-      flex: 1; 
-      overflow: hidden; 
-      text-overflow: ellipsis; 
-      white-space: nowrap; 
-    }
-    .produto-info strong { 
-      font-size: 14px; 
-    }
-    .produto-info span, .produto-info a { 
-      font-size: 12px; 
-      color: #666; 
-    }
-    .paginacao { 
-      margin-top: 10px; 
-      text-align: center; 
-    }
-    .paginacao button { 
-      background-color: #FFA500; 
-      color: white; 
-      border: none; 
-      padding: 8px 12px; 
-      margin: 0 5px; 
-      border-radius: 4px; 
-      cursor: pointer; 
-      font-size: 14px; 
-    }
-    .paginacao button:disabled { 
-      background-color: #ccc; 
-      cursor: not-allowed; 
-    }
-    .paginacao button:hover:not(:disabled) { 
-      background-color: #e59400; 
+    .imagens-wrapper {
+      display: flex;
     }
   </style>
 </head>
 <body>
   <h1>Adicionar Produto</h1>
   <form id="form-produto" enctype="multipart/form-data">
-    <input type="text" name="nome" placeholder="Nome do produto" required>
+    <input type="text" name="nome" placeholder="Nome do produto" required />
     <select name="categoria" required>
       <option value="" disabled selected>Selecione uma categoria</option>
       <option value="eletronicos">Eletrônicos</option>
@@ -143,8 +50,8 @@
       <option value="esportes">Esportes</option>
       <option value="livros">Livros</option>
       <option value="infantil">Infantil</option>
-      <option value="Celulares">Celulares</option>
-      <option value="Eletrodomésticos">Eletrodomésticos</option>
+      <option value="celulares">Celulares</option>
+      <option value="eletrodomesticos">Eletrodomésticos</option>
     </select>
     <select name="loja" required>
       <option value="" disabled selected>Selecione uma loja</option>
@@ -155,186 +62,98 @@
       <option value="mercadolivre">Mercado Livre</option>
       <option value="alibaba">Alibaba</option>
     </select>
-    <input type="url" name="link" placeholder="Link do produto (https://...)" required pattern="https?://.+">
-    <input type="file" name="imagens" accept="image/*" multiple>
+    <input type="url" name="link" placeholder="Link do produto (https://...)" required />
+    <input type="file" name="imagens" accept="image/*" multiple required />
     <button type="submit">Adicionar</button>
   </form>
-  <div id="mensagem"></div>
-  <div id="erro"></div>
+
+  <div id="mensagem" style="color: green; margin-top: 10px;"></div>
+  <div id="erro" style="color: red; margin-top: 10px;"></div>
 
   <div class="produto-lista" id="produto-lista"></div>
-  <div class="paginacao" id="paginacao"></div>
 
   <script>
-    // Carregar produtos do localStorage
-    let produtos = JSON.parse(localStorage.getItem('produtos')) || [];
-    let paginaAtual = 1;
-    const itensPorPagina = 20;
+    const form = document.getElementById('form-produto');
+    const mensagem = document.getElementById('mensagem');
+    const erro = document.getElementById('erro');
+    const produtoLista = document.getElementById('produto-lista');
 
-    // Exibir produtos ao carregar a página
-    exibirProdutos();
+    // Função para listar produtos
+    async function listarProdutos() {
+      produtoLista.innerHTML = 'Carregando...';
+      try {
+        const res = await fetch('/api/produtos');
+        const produtos = await res.json();
 
-    // Função para redimensionar imagem
-    async function resizeImage(file, maxWidth, maxHeight) {
-      return new Promise((resolve, reject) => {
-        if (file.size > 2 * 1024 * 1024) {
-          reject(new Error('Imagem muito grande. Máximo 2 MB.'));
+        if(produtos.length === 0){
+          produtoLista.innerHTML = '<p>Nenhum produto cadastrado.</p>';
+          return;
         }
 
-        const img = new Image();
-        img.src = URL.createObjectURL(file);
-        img.onload = () => {
-          const canvas = document.createElement('canvas');
-          let width = img.width;
-          let height = img.height;
+        produtoLista.innerHTML = '';
+        produtos.forEach(produto => {
+          const div = document.createElement('div');
+          div.className = 'produto-item';
 
-          if (width > height) {
-            if (width > maxWidth) {
-              height = Math.round((height * maxWidth) / width);
-              width = maxWidth;
-            }
-          } else {
-            if (height > maxHeight) {
-              width = Math.round((width * maxHeight) / height);
-              height = maxHeight;
-            }
-          }
+          const imagensHtml = produto.imagens.map(url => `<img src="${url}" alt="Imagem do produto" />`).join('');
 
-          canvas.width = width;
-          canvas.height = height;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0, width, height);
-
-          canvas.toBlob(blob => {
-            resolve(blob);
-          }, 'image/jpeg', 0.8);
-        };
-        img.onerror = reject;
-      });
+          div.innerHTML = `
+            <strong>${produto.nome}</strong> <br/>
+            Categoria: ${produto.categoria} | Loja: ${produto.loja} <br/>
+            <a href="${produto.link}" target="_blank">Link do produto</a> <br/>
+            <div class="imagens-wrapper">${imagensHtml}</div>
+            <button onclick="excluirProduto(${produto.id})">Excluir</button>
+          `;
+          produtoLista.appendChild(div);
+        });
+      } catch(e) {
+        produtoLista.innerHTML = 'Erro ao carregar produtos.';
+      }
     }
 
-    // Adicionando um produto
-    document.getElementById('form-produto').addEventListener('submit', async e => {
+    // Excluir produto
+    async function excluirProduto(id) {
+      if(!confirm('Confirma exclusão do produto?')) return;
+      try {
+        await fetch(`/api/produtos/${id}`, { method: 'DELETE' });
+        mensagem.textContent = 'Produto excluído com sucesso.';
+        erro.textContent = '';
+        listarProdutos();
+      } catch(e) {
+        erro.textContent = 'Erro ao excluir produto.';
+        mensagem.textContent = '';
+      }
+    }
+
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
+      mensagem.textContent = '';
+      erro.textContent = '';
 
-      const mensagem = document.getElementById('mensagem');
-      const erro = document.getElementById('erro');
-
-      const nome = e.target.querySelector('input[name="nome"]').value;
-      const categoria = e.target.querySelector('select[name="categoria"]').value;
-      const loja = e.target.querySelector('select[name="loja"]').value;
-      const link = e.target.querySelector('input[name="link"]').value;
-      const imagens = e.target.querySelector('input[name="imagens"]').files;
-
-      if (!nome || !categoria || !loja || !link) {
-        erro.textContent = 'Todos os campos são obrigatórios!';
-        mensagem.textContent = '';
-        return;
-      }
-      if (imagens.length === 0) {
-        erro.textContent = 'Pelo menos uma imagem deve ser escolhida!';
-        mensagem.textContent = '';
-        return;
-      }
-      if (imagens.length > 3) {
-        erro.textContent = 'Máximo de 3 imagens por produto!';
-        mensagem.textContent = '';
-        return;
-      }
+      const formData = new FormData(form);
 
       try {
-        const imagensArray = await Promise.all(
-          Array.from(imagens).map(async file => {
-            const resizedBlob = await resizeImage(file, 300, 300);
-            return new Promise((resolve, reject) => {
-              const reader = new FileReader();
-              reader.onload = () => resolve(reader.result);
-              reader.onerror = reject;
-              reader.readAsDataURL(resizedBlob);
-            });
-          })
-        );
+        const res = await fetch('/api/produtos', {
+          method: 'POST',
+          body: formData
+        });
+        const data = await res.json();
 
-        const novoProduto = { nome, categoria, loja, link, imagens: imagensArray };
-        produtos.push(novoProduto);
-
-        localStorage.setItem('produtos', JSON.stringify(produtos));
-
-        paginaAtual = Math.ceil(produtos.length / itensPorPagina);
-        exibirProdutos();
+        if (!res.ok) {
+          erro.textContent = data.error || 'Erro ao adicionar produto.';
+          return;
+        }
 
         mensagem.textContent = 'Produto adicionado com sucesso!';
-        erro.textContent = '';
-        e.target.reset();
-      } catch (error) {
-        erro.textContent = error.message || 'Erro ao processar as imagens. Tente novamente.';
-        mensagem.textContent = '';
+        form.reset();
+        listarProdutos();
+      } catch (e) {
+        erro.textContent = 'Erro ao enviar dados.';
       }
     });
 
-    // Exibindo os produtos
-    function exibirProdutos() {
-      const listaProdutos = document.getElementById('produto-lista');
-      const paginacao = document.getElementById('paginacao');
-      listaProdutos.innerHTML = '';
-
-      if (produtos.length === 0) {
-        listaProdutos.innerHTML = '<p>Nenhum produto adicionado ainda.</p>';
-        paginacao.innerHTML = '';
-        return;
-      }
-
-      const inicio = (paginaAtual - 1) * itensPorPagina;
-      const fim = inicio + itensPorPagina;
-      const produtosPaginados = produtos.slice(inicio, fim);
-
-      produtosPaginados.forEach((produto, index) => {
-        const globalIndex = inicio + index;
-        const divProduto = document.createElement('div');
-        divProduto.classList.add('produto-item');
-
-        divProduto.innerHTML = `
-          <div class="produto-info">
-            <strong title="${produto.nome}">${produto.nome}</strong>
-            <span>C: ${produto.categoria} | L: ${produto.loja}</span>
-            <a href="${produto.link}" target="_blank" title="${produto.link}">Link</a>
-          </div>
-          <div>
-            ${produto.imagens[0] ? `<img src="${produto.imagens[0]}" alt="Imagem do produto">` : ''}
-            <button onclick="removerProduto(${globalIndex})">Excluir</button>
-          </div>
-        `;
-        listaProdutos.appendChild(divProduto);
-      });
-
-      // Paginação
-      const totalPaginas = Math.ceil(produtos.length / itensPorPagina);
-      paginacao.innerHTML = `
-        <button onclick="mudarPagina(${paginaAtual - 1})" ${paginaAtual === 1 ? 'disabled' : ''}>Anterior</button>
-        <span>Página ${paginaAtual} de ${totalPaginas}</span>
-        <button onclick="mudarPagina(${paginaAtual + 1})" ${paginaAtual === totalPaginas ? 'disabled' : ''}>Próximo</button>
-      `;
-    }
-
-    // Mudar página
-    function mudarPagina(novaPagina) {
-      const totalPaginas = Math.ceil(produtos.length / itensPorPagina);
-      if (novaPagina >= 1 && novaPagina <= totalPaginas) {
-        paginaAtual = novaPagina;
-        exibirProdutos();
-      }
-    }
-
-    // Remover um produto
-    function removerProduto(index) {
-      produtos.splice(index, 1);
-      localStorage.setItem('produtos', JSON.stringify(produtos));
-      const totalPaginas = Math.ceil(produtos.length / itensPorPagina);
-      if (paginaAtual > totalPaginas) {
-        paginaAtual = totalPaginas || 1;
-      }
-      exibirProdutos();
-    }
+    // Carregar lista ao iniciar
+    listarProdutos();
   </script>
 </body>
 </html>
